fix: adjust spacing

--- a/src/app/planner/page.module.scss
+++ b/src/app/planner/page.module.scss
@@ -15,3 +15,7 @@
   min-height: 744px;
   padding: 0px 8px;
 }
+
+.plannerContainer {
+  width: 100%;
+}
