--- a/src/components/DatePicker/DatePicker.module.scss
+++ b/src/components/DatePicker/DatePicker.module.scss
@@ -3,6 +3,7 @@
 .datepicker {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .hasError {
     & input {
@@ -227,6 +228,7 @@
 
   :global(.react-datepicker__week) {
     display: flex;
+    justify-content: center;
   }
 
   :global(.react-datepicker__day-names) {
